--- a/.github/workflows/update-stars.yml
+++ b/.github/workflows/update-stars.yml
@@ -12,6 +12,6 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Update README with Starred Repositories
-        uses: mxvsh/starkit@1.0.0
+        uses: mxvsh/starkit@v1.2.0
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
