--- a/.github/workflows/update-stars.yml
+++ b/.github/workflows/update-stars.yml
@@ -17,3 +17,4 @@ jobs:
         uses: mxvsh/starkit@v1.2.7
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
+          github-username: ${{ github.actor }}
