--- a/.github/workflows/update-stars.yml
+++ b/.github/workflows/update-stars.yml
@@ -1,11 +1,19 @@
-name: Update Starred Repositories
+name: Update Starred Repositories and Deploy to GitHub Pages
+
+permissions:
+  contents: write
+  pages: write
+  id-token: write
+
+# Configure GitHub Pages
+env:
+  name: github-pages
+  url: ${{ steps.deployment.outputs.page_url }}
 
 on:
   schedule:
     - cron: '5 4 * * *'   # Run daily at 4:05 AM
   workflow_dispatch:      # Allow manual trigger
-
-permissions: write-all
 
 jobs:
   update-stars:
@@ -13,16 +21,18 @@ jobs:
     
     steps:
       - uses: actions/checkout@v3
-      - name: Update README with Starred Repositories
+      - name: Update README and Build Web
         uses: mxvsh/starkit@v2.0.0
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           github-username: ${{ github.actor }}
           build-web: true
       
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
+      - name: Upload Pages artifact
+        uses: actions/upload-pages-artifact@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist
-          force_orphan: true
+          path: ./dist
+      
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
