--- a/.github/workflows/update-stars.yml
+++ b/.github/workflows/update-stars.yml
@@ -22,6 +22,18 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           github-username: ${{ github.actor }}
           build-web: true
+      - name: Verify dist directory
+        run: |
+          ls -la
+          echo "Checking if dist directory exists..."
+          if [ -d "dist" ]; then
+            echo "dist directory exists"
+            ls -la dist/
+          else
+            echo "dist directory not found, creating it"
+            mkdir -p dist
+            echo "<html><body><h1>Placeholder</h1></body></html>" > dist/index.html
+          fi
 
       - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
